# jane_street_puzzle

./: .gitignore  l_shape_generator.py  main.py  notes.txt  puzzle_solver.py  readme.md  runner.sh  shapes_creator.py
altered_states_2/: README.md  main.py  runner.sh  state_trie.py
hooks_10/: .gitignore  l_shape_generator.py  main.py  puzzle_solver.py  readme.md  runner.sh
hooks_10/hooks_10/: .gitignore  dune-project  hooks_10.opam
hooks_10/hooks_10/data/: all_shapes_10.txt  all_shapes_5.txt
hooks_10/hooks_10/lib/: solution.ml
hooks_10/hooks_10/test/: dune
numbers_4/: README.md  solution.py  utils.py  validation_functions.py  validation_functions_tests.py
numbers_4/draw/: draw.py
